--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "bootstrap": "^4.6.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
@@ -23,8 +24,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "react-thunk": "^1.0.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
